--- a/src/Raven.Studio/wwwroot/Content/css/bootstrap/type.less
+++ b/src/Raven.Studio/wwwroot/Content/css/bootstrap/type.less
@@ -125,6 +125,8 @@ mark,
   // Given the contrast here, this is the only class to have its color inverted
   // automatically.
   .bg-variant(@brand-primary, @brand-primary-light);
+  background-color:@brand-primary;
+  background-image:none;
 }
 .bg-success {
   .bg-variant(@state-success-bg, @brand-success-light);
