--- a/src/Raven.Studio/wwwroot/Content/css/bootstrap/variables.less
+++ b/src/Raven.Studio/wwwroot/Content/css/bootstrap/variables.less
@@ -100,7 +100,7 @@
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
-@padding-base-vertical:     8px;
+@padding-base-vertical:     7px;
 @padding-base-horizontal:   12px;
 
 @padding-large-vertical:    10px;
@@ -164,27 +164,27 @@
 
 @btn-primary-color:              @gray-lighter;
 @btn-primary-bg:                 @brand-primary;
-@btn-primary-border:             darken(@btn-primary-bg, 5%);
+@btn-primary-border:             lighten(@btn-primary-bg, 1%);
 @btn-primary-icon:               inherit;
 
 @btn-success-color:              @gray-lighter;
 @btn-success-bg:                 @brand-success-dark;
-@btn-success-border:             darken(@btn-success-bg, 5%);
+@btn-success-border:             lighten(@btn-success-bg, 1%);
 @btn-success-icon:               @brand-success-light;
 
 @btn-info-color:                 @gray-lighter;
 @btn-info-bg:                    @brand-info-dark;
-@btn-info-border:                darken(@btn-info-bg, 5%);
+@btn-info-border:                lighten(@btn-info-bg, 1%);
 @btn-info-icon:                  @brand-info-light;
 
 @btn-warning-color:              @gray-lighter;
 @btn-warning-bg:                 @brand-warning-dark;
-@btn-warning-border:             darken(@btn-warning-bg, 5%);
+@btn-warning-border:             lighten(@btn-warning-bg, 1%);
 @btn-warning-icon:               @brand-warning-light;
 
 @btn-danger-color:               @gray-lighter;
 @btn-danger-bg:                  @brand-danger-dark;
-@btn-danger-border:              darken(@btn-danger-bg, 5%);
+@btn-danger-border:              lighten(@btn-danger-bg, 1%);
 @btn-danger-icon:                @brand-danger-light;
 
 @btn-link-disabled-color:        @gray-light;
@@ -239,9 +239,9 @@
 @legend-border-color:            #e5e5e5;
 
 //** Background color for textual input addons
-@input-group-addon-bg:           @input-border;
+@input-group-addon-bg:           transparent; //@input-border;
 //** Border color for textual input addons
-@input-group-addon-border-color: @input-border;
+@input-group-addon-border-color: @gray-dark; //@input-border;
 
 //** Disabled cursor for form controls and buttons.
 @cursor-disabled:                not-allowed;
